# backend/swagger-spec.yaml
@@ -1,5 +1,92 @@
 openapi: 3.0.0
 paths:
+  /echo:
+    get:
+      operationId: get-echo
+      summary: ""
+      parameters: []
+      responses:
+        default:
+          description: ""
+          content:
+            application/json:
+              schema:
+                type: string
+      tags:
+        - echo
+  /users:
+    post:
+      operationId: create
+      parameters: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UserDto"
+      responses:
+        "201":
+          description: ""
+      tags: &a1
+        - users
+    get:
+      operationId: findAll
+      parameters: []
+      responses:
+        "200":
+          description: ""
+      tags: *a1
+  /users/{id}:
+    get:
+      operationId: findOne
+      parameters:
+        - name: id
+          required: true
+          in: path
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+      tags: *a1
+    patch:
+      operationId: update
+      parameters:
+        - name: id
+          required: true
+          in: path
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UserDto"
+      responses:
+        "200":
+          description: ""
+      tags: *a1
+    delete:
+      operationId: remove
+      parameters:
+        - name: id
+          required: true
+          in: path
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+      tags: *a1
+  /users/search:
+    get:
+      operationId: search
+      parameters: []
+      responses:
+        "200":
+          description: ""
+      tags: *a1
   /auth/test/{id}:
     post:
       operationId: login-test-user
@@ -17,7 +104,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/UserDto"
-      tags: &a1
+      tags: &a2
         - auth
   /auth/apple:
     post:
@@ -36,7 +123,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/UserDto"
-      tags: *a1
+      tags: *a2
   /auth/google:
     post:
       operationId: authenticateGoogle
@@ -54,7 +141,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/UserDto"
-      tags: *a1
+      tags: *a2
   /auth/facebook:
     post:
       operationId: authenticateWithFacebookPo
@@ -72,94 +159,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/UserDto"
-      tags: *a1
-  /users:
-    post:
-      operationId: create
-      parameters: []
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/UserDto"
-      responses:
-        "201":
-          description: ""
-      tags: &a2
-        - users
-    get:
-      operationId: findAll
-      parameters: []
-      responses:
-        "200":
-          description: ""
       tags: *a2
-  /users/{id}:
-    get:
-      operationId: findOne
-      parameters:
-        - name: id
-          required: true
-          in: path
-          schema:
-            type: string
-      responses:
-        "200":
-          description: ""
-      tags: *a2
-    patch:
-      operationId: update
-      parameters:
-        - name: id
-          required: true
-          in: path
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/UserDto"
-      responses:
-        "200":
-          description: ""
-      tags: *a2
-    delete:
-      operationId: remove
-      parameters:
-        - name: id
-          required: true
-          in: path
-          schema:
-            type: string
-      responses:
-        "200":
-          description: ""
-      tags: *a2
-  /users/search:
-    get:
-      operationId: search
-      parameters: []
-      responses:
-        "200":
-          description: ""
-      tags: *a2
-  /echo:
-    get:
-      operationId: get-echo
-      summary: ""
-      parameters: []
-      responses:
-        default:
-          description: ""
-          content:
-            application/json:
-              schema:
-                type: string
-      tags:
-        - echo
 info:
   title: Orasul Meu
   description: Orasul Meu Swagger API
@@ -173,7 +173,11 @@ components:
   schemas:
     UserDto:
       type: object
-      properties: {}
+      properties:
+        facebook_token:
+          type: string
+        socialProfilePictureUrl:
+          type: string
     appleToken:
       type: object
       properties:
